@@ -25,6 +25,7 @@ import org.elasticsearch.test.ESTestCase;
 import org.hamcrest.Matcher;
 
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.CyclicBarrier;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -169,25 +170,23 @@ public class EsExecutorsTests extends ESTestCase {
     public void testScaleUp() throws Exception {
         final int min = between(1, 3);
         final int max = between(min + 1, 6);
-        final ThreadBarrier barrier = new ThreadBarrier(max + 1);
+        final CyclicBarrier barrier = new CyclicBarrier(max + 1);
 
         ThreadPoolExecutor pool =
-                EsExecutors.newScaling(getClass().getName() + "/" + getTestName(), min, max, between(1, 100), randomTimeUnit(), EsExecutors.daemonThreadFactory("test"), threadContext);
+                EsExecutors.newScaling(getClass().getName() + "/" + getTestName(), min, max, between(1, 100), randomTimeUnit(),
+                    EsExecutors.daemonThreadFactory("test"), threadContext);
         assertThat("Min property", pool.getCorePoolSize(), equalTo(min));
         assertThat("Max property", pool.getMaximumPoolSize(), equalTo(max));
 
         for (int i = 0; i < max; ++i) {
             final CountDownLatch latch = new CountDownLatch(1);
-            pool.execute(new Runnable() {
-                @Override
-                public void run() {
-                    latch.countDown();
-                    try {
-                        barrier.await();
-                        barrier.await();
-                    } catch (Exception e) {
-                        barrier.reset(e);
-                    }
+            pool.execute(() -> {
+                latch.countDown();
+                try {
+                    barrier.await();
+                    barrier.await();
+                } catch (Exception e) {
+                    throw new AssertionError(e);
                 }
             });
 
@@ -206,25 +205,23 @@ public class EsExecutorsTests extends ESTestCase {
     public void testScaleDown() throws Exception {
         final int min = between(1, 3);
         final int max = between(min + 1, 6);
-        final ThreadBarrier barrier = new ThreadBarrier(max + 1);
+        final CyclicBarrier barrier = new CyclicBarrier(max + 1);
 
         final ThreadPoolExecutor pool =
-                EsExecutors.newScaling(getClass().getName() + "/" + getTestName(), min, max, between(1, 100), TimeUnit.MILLISECONDS, EsExecutors.daemonThreadFactory("test"), threadContext);
+                EsExecutors.newScaling(getClass().getName() + "/" + getTestName(), min, max, between(1, 100), TimeUnit.MILLISECONDS,
+                    EsExecutors.daemonThreadFactory("test"), threadContext);
         assertThat("Min property", pool.getCorePoolSize(), equalTo(min));
         assertThat("Max property", pool.getMaximumPoolSize(), equalTo(max));
 
         for (int i = 0; i < max; ++i) {
             final CountDownLatch latch = new CountDownLatch(1);
-            pool.execute(new Runnable() {
-                @Override
-                public void run() {
-                    latch.countDown();
-                    try {
-                        barrier.await();
-                        barrier.await();
-                    } catch (Exception e) {
-                        barrier.reset(e);
-                    }
+            pool.execute(() -> {
+                latch.countDown();
+                try {
+                    barrier.await();
+                    barrier.await();
+                } catch (Exception e) {
+                    throw new AssertionError(e);
                 }
             });
 
@@ -337,7 +334,7 @@ public class EsExecutorsTests extends ESTestCase {
         final CountDownLatch executed = new CountDownLatch(1);
 
         threadContext.putHeader("foo", "bar");
-        final Integer one = new Integer(1);
+        final Integer one = Integer.valueOf(1);
         threadContext.putTransient("foo", one);
         EsThreadPoolExecutor executor =
                 EsExecutors.newFixed(getName(), pool, queue, EsExecutors.daemonThreadFactory("dummy"), threadContext);
